[tool.poetry]
name = "pyfony-bundles"
version = "0.3.2"
description = "Pyfony Framework bundles base package"
readme = "README.md"
repository = "https://github.com/pyfony/pyfony-bundles"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "pyfonybundles", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = ">=0.5.8,<1.0.0"
injecta = "^0.9.3"
python-box = "^3.4"
importlib-metadata = "^3.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
